test cho chức năng 3